syntax = "proto3";

package resist.identity.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "resist/identity/v1/params.proto";
import "resist/identity/v1/user_profile.proto";

option go_package = "resist/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/resist/identity/v1/params";
  }

  // ListUserProfile Queries a list of UserProfile items.
  rpc GetUserProfile(QueryGetUserProfileRequest) returns (QueryGetUserProfileResponse) {
    option (google.api.http).get = "/resist/identity/v1/user_profile/{index}";
  }

  // ListUserProfile defines the ListUserProfile RPC.
  rpc ListUserProfile(QueryAllUserProfileRequest) returns (QueryAllUserProfileResponse) {
    option (google.api.http).get = "/resist/identity/v1/user_profile";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetUserProfileRequest defines the QueryGetUserProfileRequest message.
message QueryGetUserProfileRequest {
  string index = 1;
}

// QueryGetUserProfileResponse defines the QueryGetUserProfileResponse message.
message QueryGetUserProfileResponse {
  UserProfile user_profile = 1 [(gogoproto.nullable) = false];
}

// QueryAllUserProfileRequest defines the QueryAllUserProfileRequest message.
message QueryAllUserProfileRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllUserProfileResponse defines the QueryAllUserProfileResponse message.
message QueryAllUserProfileResponse {
  repeated UserProfile user_profile = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
